[project] :arrow_up: Upgrade to JDK 25
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>